Source/WebCore/xml/XMLHttpRequest.cpp
@@ -1116,7 +1116,11 @@ void XMLHttpRequest::didReceiveResponse(unsigned long identifier, const Resource
     InspectorInstrumentation::didReceiveXHRResponse(scriptExecutionContext(), identifier);
 
     m_response = response;
-    m_responseEncoding = extractCharsetFromMediaType(m_mimeTypeOverride);
+    if (!m_mimeTypeOverride.isEmpty()) {
+        m_response.setHTTPHeaderField("Content-Type", m_mimeTypeOverride);
+        m_responseEncoding = extractCharsetFromMediaType(m_mimeTypeOverride);
+    }
+
     if (m_responseEncoding.isEmpty())
         m_responseEncoding = response.textEncodingName();
 }
